# nachi_project

./: .travis.yaml  .travis.yml  README.md
nachi_description/: CMakeLists.txt  package.xml
nachi_description/launch/mz07/: mz07.launch  mz07_sensor.launch
nachi_description/meshes/mz07/visual/: link_1.dae  (+4 more)
nachi_description/robots/mz07/: mz07.sensor.urdf.xacro  mz07.urdf.xacro
nachi_description/test/mz07/: mz07_launch_test.xml
nachi_description/urdf/: common.xacro
nachi_description/urdf/mz07/: body.gazebo.xacro  body.transmission.xacro  body.urdf.xacro
nachi_description/urdf/sensor/: kinect.gazebo.xacro  kinect.urdf.xacro
nachi_gazebo/: CMakeLists.txt  package.xml
nachi_gazebo/launch/mz07/: mz07_empty_world.launch  mz07_sensor_world.launch
nachi_gazebo/test/: mz07_empty_world_launch_test.xml
nachi_gazebo/worlds/mz07/: mz07_empty.world
nachi_mz07_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
nachi_mz07_moveit_config/config/: controllers.yaml  fake_controllers.yaml  mz07.srdf  ompl_planning.yaml
nachi_mz07_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  joystick_control.launch  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  mz07_moveit_controller_manager.launch.xml  mz07_moveit_sensor_manager.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
nachi_mz07_moveit_config/test/: demo_launch_test.xml  moveit_planning_execution_launch_test.xml
(+51 files in other folders)
